# pet-rs

./: .gitignore  AGENTS.md  Cargo.toml  Plan.md  README.md  STYLE_GUIDE.md  rustfmt.toml
.github/workflows/: ci.yml
bevy_example/: Cargo.toml  README.md
bevy_example/src/: main.rs
bevy_port/: Cargo.toml  README.md
bevy_port/src/: main.rs  platform_windows.rs
docs/: architecture.md
examples/: ai_config_example.toml  basic_pet.rs  cli_pet.rs  config.json  decision_demo.rs  hook_demo.rs  memory_demo.rs  smart_assistant.rs
examples/bevy_adapter/: mod.rs
examples/pet_agent/: Cargo.toml
examples/pet_agent/src/: app.rs  commands.rs  config.rs  event.rs  log.rs  main.rs  pet.rs  tui.rs  ui.rs
examples/pet_agent/src/ai/: budget.rs  crypto.rs  error.rs  manager.rs  mod.rs  pricing.rs  provider.rs  rate_limiter.rs  usage.rs
examples/pet_agent/src/ai/adapters/: mod.rs
examples/wasm_ai_openrouter/: Cargo.toml
examples/wasm_channel_discord/: Cargo.toml
examples/wasm_channel_telegram/: Cargo.toml
examples/wasm_consumption/: Cargo.toml
examples/wasm_discount/: Cargo.toml
examples/wasm_hooks/: Cargo.toml
examples/wasm_stats/: Cargo.toml
scripts/: build_and_test.ps1  build_and_test.sh
src/: config.rs  dependency.rs  error.rs  lib.rs  main.rs  permission.rs  prelude.rs
src/agent/: core.rs  loop_impl.rs  mod.rs  personality.rs  role.rs
src/ai/: budget.rs  crypto.rs  error.rs  manager.rs  mod.rs  pricing.rs  provider.rs  rate_limiter.rs  usage.rs  wasm_plugin.rs
src/channels/: adapter.rs  manager.rs  message.rs  mod.rs  wasm_channel.rs
src/communication/: channel.rs  message.rs  mod.rs  router.rs
src/components/: pet.rs
src/context/: builder.rs  context_impl.rs  mod.rs  window.rs
src/decision/: engine.rs  hybrid.rs  llm_based.rs  mod.rs  rule_based.rs
src/events/: mod.rs  pet_events.rs
src/hooks/: context.rs  hook_system.rs  mod.rs  points.rs  registry.rs  runner.rs
src/memory/: mod.rs  (+4 more)
tests/: integration_tests.rs  pet_tests.rs
(+45 files in other folders)
