[package]
name = "pet-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pet-agent"
path = "src/main.rs"

[dependencies]
# TUI 框架
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui-interact = "0.4"

# 异步运行时
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# HTTP 客户端（调用 AI API）
reqwest = { version = "0.12", features = ["json"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# 工具库
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
log = "0.4"
