[package]
name = "pet-agent"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "pet-agent"
path = "src/main.rs"

[dependencies]
# 框架
agent-pet-rs = { path = "../.." }

# TUI
ratatui = "0.28"
crossterm = "0.28"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# 工具
dirs = "5"
